Archive2/fa/54944b88e5dd0c/output
main.cpp:4:11: error: ‘void f(int)’ redeclared as different kind of symbol
 void f(int);
           ^
main.cpp:3:13: note: previous declaration ‘typedef int f’
 typedef int f;
             ^
