Archive2/fa/54944b88e5dd0c/main.cpp
#include <iostream>

typedef int f;
void f(int);